--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>PWA</title>
+		<title>Morem</title>
 		<meta charset="utf-8"/>
-		<meta name="theme-color" content="#1e88e5"/>
+		<meta name="theme-color" content="#333"/>
 		<meta name="mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<meta name="description" content="The universal PWA builder & CLI tool~!"/>
+		<meta name="description" content="Your daily increasing meditation timer."/>
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3-cXbKD.woff2" />
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_aZA3gnD_vx3rCs.woff2" />
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_c5H3gfD_vx3rCubqg.woff2" />
