feedback form: one more hopeless try

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
 		<div id="app"></div>
 
 		<!-- forms! The netlify bots can't find a form  -->
-		<form class="very-hidden" name="feedback" id="feedback" method="POST" data-netlify="true" netlify-honeypot="bruh">
+		<!-- <form class="very-hidden" name="feedback" id="feedback" method="POST" data-netlify="true" netlify-honeypot="bruh">
 			<input type="text" id="name" name="name" placeholder="optional"/>
 			<input type="email" id="email" name="email" placeholder="optional"/>
 			<textarea id="message" name="message" placeholder="Required"></textarea>
 			<input name="bruh" />
-		</form>
+		</form> -->
 
 	</body>
 </html>
