--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Your daily increasing meditation timer."/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3-cXbKD.woff2" />
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_aZA3gnD_vx3rCs.woff2" />
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_c5H3gfD_vx3rCubqg.woff2" />
 		<link rel="shortcut icon" href="/assets/favicon.png"/>
 		<link rel="manifest" href="/assets/manifest.json"/>
+		<link rel="manifest" href="/assets/manifest.json"/>
+		<!-- <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
 	</head>
 	<body>
 		<div id="app"></div>
