--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_aZA3gnD_vx3rCs.woff2" />
 		<link rel="preload" as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_c5H3gfD_vx3rCubqg.woff2" />
 		<link rel="shortcut icon" href="/assets/favicon.png"/>
+		<link rel="apple-touch-icon" href="/assets/favicon.png">
 		<link rel="manifest" href="/assets/manifest.json"/>
 		<link rel="manifest" href="/assets/manifest.json"/>
 		<!-- <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
@@ -20,4 +21,7 @@
 	<body>
 		<div id="app"></div>
 	</body>
+	<noscript>
+		This web app requires javascript to work.
+	</noscript>
 </html>
